Sidebar_top + added imgs

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- /mediaquery -->
   <link rel="stylesheet" href="assets/mediaquery/mediaquery.css">
-<!-- /mediaquery -->
+  <!-- /mediaquery -->
 
 
   <!-- fontawesome -->
@@ -30,31 +30,118 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <!-- /google font -->
 
-  <title>Document</title>
+  <title>Spotify Clone</title>
+
 </head>
 
 <body>
 
+  <div class="wrapper d-flex">
 
-  <!-- header -->
-  <header>
+    <!-- main -->
+    <main class="d-flex" id="site-content">
 
-  </header>
-  <!-- /header -->
-
-  <!-- main -->
-  <main>
-
-  </main>
-  <!-- /main -->
+      <aside class="sidebar d-flex column">
 
 
-  <!-- footer -->
-  <footer>
 
-  </footer>
-  <!-- /footer -->
+        <div class="sidebar_top d-flex column">
+          <img class="logo" src="assets/img/sidebar/logo.svg" alt="">
+          <ul>
+            <li>
+              <a href="#">
+                <img src="assets/img/sidebar/home.svg" alt="">
+                <span>Home</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="assets/img/sidebar/search.svg" alt="">
+                <span>Cerca</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="assets/img/sidebar/libreria.svg" alt="">
+                <span>La tua libreria</span>
+              </a>
+            </li>
+          </ul>
 
+          <h5 class="playlist_text"><strong>PLAYLIST</strong></h5>
+          <div class="crea_playlist d-flex">
+            <a href="#"> <i class="fas fa-plus-square crea_playlist_icon"></i></a>
+            <a href="#" class="crea_playlist_text">
+              <span class="">Crea Playlist</span>
+            </a>
+          </div>
+          <ul>
+            <li><a href="#">Nome Playlist</a></li>
+            <li><a href="#">Nome Playlist</a></li>
+            <li><a href="#">Nome Playlist</a></li>
+            <li><a href="#">Nome Playlist</a></li>
+            <li><a href="#">Nome Playlist</a></li>
+            <li><a href="#">Nome Playlist</a></li>
+            <li><a href="#">Nome Playlist</a></li>
+
+
+          </ul>
+
+        </div>
+
+
+
+
+
+        <div class="sidebar_bottom d-flex">
+          <div class="installa_app">
+            <a href="#"><i class="fas fa-arrow-down"></i> Installa App</a>
+          </div>
+          <div class="artist">
+            <i class="fas fa-user-circle"></i>
+          </div>
+        </div>
+
+
+
+
+
+      </aside>
+
+
+
+
+
+
+
+
+
+
+      <section class="main_content">
+        <div class="subscribe_banner">
+          a
+        </div>
+
+        Main Content lorem
+      </section>
+
+
+
+
+
+    </main>
+    <!-- /main -->
+
+
+    <!-- footer -->
+    <footer class="">
+      <div class="player">Player</div>
+    </footer>
+    <!-- /footer -->
+
+
+
+  </div>
 
 </body>
 
