--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
 
 
 
-        <div class="sidebar_bottom d-flex">
+        <div class="sidebar_bottom d-flex column">
           <div class="installa_app">
             <a href="#"><i class="fas fa-arrow-down"></i> Installa App</a>
           </div>
           <div class="artist">
-            <i class="fas fa-user-circle"></i>
+            <a href="#"><i class="fas fa-user-circle"></i> John Doe</a>
           </div>
         </div>
 
