--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
   <!-- google font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@100&display=swap" rel="stylesheet">
   <!-- /google font -->
 
   <title>Spotify Clone</title>
@@ -50,7 +51,7 @@
           <ul>
             <li>
               <a href="#">
-                <img src="assets/img/sidebar/home.svg" alt="">
+                <img src="assets/img/sidebar/home.svg" class="grey" alt="">
                 <span>Home</span>
               </a>
             </li>
@@ -95,10 +96,10 @@
 
         <div class="sidebar_bottom d-flex column">
           <div class="installa_app">
-            <a href="#"><i class="fas fa-arrow-down"></i> Installa App</a>
+            <a href="#"><i class="far fa-arrow-alt-circle-down"></i> Installa App</a>
           </div>
           <div class="artist">
-            <a href="#"><i class="fas fa-user-circle"></i> John Doe</a>
+            <a href="#"><i class="fas fa-user-circle"></i> <h5><strong>John Doe</strong></h5></a>
           </div>
         </div>
 
