--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
       <section class="main_content">
         <div class="subscribe_banner">
-          a
+          <button type="button" class="btn btn-upgrade">EFFETTUA L'UPGRADE</button>
         </div>
 
         Main Content lorem
