Implemented Navbar + Added Recently_Played img

--- a/index.html
+++ b/index.html
@@ -123,7 +123,16 @@
           <button type="button" class="btn btn-upgrade">EFFETTUA L'UPGRADE</button>
         </div>
 
-        Main Content lorem
+        <nav class="d-flex">
+          <div class="navbar_menu">
+            <a href="#">IN EVIDENZA</a>
+          </div>
+          <div class="navbar_menu"><a href="#">PODCAST</a></div>
+          <div class="navbar_menu"><a href="#">CLASSIFICHE</a></div>
+          <div class="navbar_menu"><a href="#">GENERI E MOOD</a></div>
+          <div class="navbar_menu"><a href="#">NUOVE USCITE</a></div>
+          <div class="navbar_menu"><a href="#">SCOPRI</a></div>
+        </nav>
       </section>
 
 
