--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <span class="">Crea Playlist</span>
             </a>
           </div>
-          <ul>
+          <ul class="nome_playlist">
             <li><a href="#">Nome Playlist</a></li>
             <li><a href="#">Nome Playlist</a></li>
             <li><a href="#">Nome Playlist</a></li>
