Improved Recently_Played section + added img

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
             <a href="#"><i class="far fa-arrow-alt-circle-down"></i> Installa App</a>
           </div>
           <div class="artist">
-            <a href="#"><i class="fas fa-user-circle"></i> <h5><strong>John Doe</strong></h5></a>
+            <a href="#"><i class="fas fa-user-circle"></i>
+              <h5><strong>John Doe</strong></h5>
+            </a>
           </div>
         </div>
 
@@ -133,6 +135,46 @@
           <div class="navbar_menu"><a href="#">NUOVE USCITE</a></div>
           <div class="navbar_menu"><a href="#">SCOPRI</a></div>
         </nav>
+
+
+      <section id="recently_played">
+        <h2><strong>Recently Played</strong></h2>
+        <div class="menu_recently_played d-flex">
+          <div class="card_recently_played d-flex column">
+            <img src="assets/img/main_content/recently_played/metal_lifting.jpg" alt="">
+            <h4>Heavy Metal</h4>
+            <p>Subtitle</p>
+          </div>
+          <div class="card_recently_played d-flex column">
+            <img src="assets/img/main_content/recently_played/stranger.jpg" alt="">
+            <h4>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h4>
+            <p>Kyle Dixon & Michael Stein</p>
+          </div>
+          <div class="card_recently_played d-flex column">
+            <img src="assets/img/main_content/recently_played/aquietplace.jpeg" alt="">
+            <h4>A quiet place</h4>
+            <p>Subtitle</p>
+          </div>
+          <div class="card_recently_played d-flex column">
+            <img src="assets/img/main_content/recently_played/split.jpeg" alt="">
+            <h4>Split</h4>
+            <p>Subtitle</p>
+          </div>
+          <div class="card_recently_played d-flex column">
+            <img src="assets/img/main_content/recently_played/sinister.jpeg" alt="">
+            <h4>A cure for wellness</h4>
+            <p>Subtitle</p>
+          </div>
+          <div class="card_recently_played d-flex column">
+            <img src="assets/img/main_content/recently_played/sinister.jpeg" alt="">
+            <h4>Sinister</h4>
+            <p>Subtitle</p>
+          </div>
+
+
+        </div>
+      </section>
+
       </section>
 
 
