Improved Recently_Played + Create_For_You

--- a/index.html
+++ b/index.html
@@ -175,6 +175,29 @@
         </div>
       </section>
 
+
+      <section id="create_for_you">
+        <h2><strong>Creato per John Doe</strong></h2>
+        <p>Piu' ascolti, piu' accurati saranno i suggerimenti.</p>
+        <div class="menu_create_for_you d-flex">
+          <div class="card_create_for_you d-flex column">
+            <img src="assets/img/main_content/create_for_you/mix.jpeg" alt="">
+            <h4>Release Radar</h4>
+          </div>
+          <div class="card_create_for_you column">
+            <img src="assets/img/main_content/create_for_you/radar.jpeg" alt="">
+            <h4>Release Radar</h4>
+          </div>
+        </div>
+      </section>
+
+
+
+      <section id="artisti_popolari">
+
+      </section>
+
+
       </section>
 
 
