--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
       <section id="create_for_you">
         <h2><strong>Creato per John Doe</strong></h2>
-        <p>Piu' ascolti, piu' accurati saranno i suggerimenti.</p>
+        <p>Pi&ugrave ascolti, pi&ugrave accurati saranno i suggerimenti.</p>
         <div class="menu_create_for_you d-flex">
           <div class="card_create_for_you d-flex column">
             <img src="assets/img/main_content/create_for_you/mix.jpeg" alt="">
@@ -194,7 +194,18 @@
 
 
       <section id="artisti_popolari">
-
+        <h2><strong>Artisti pi&ugrave popolari</strong></h2>
+        <p>Pi&ugrave ascolti, pi&ugrave accurati saranno i suggerimenti.</p>
+        <div class="menu_artisti_popolari d-flex">
+          <div class="card_artisti_popolari d-flex column">
+            <img src="assets/img/main_content/artisti_popolari/youg.jpeg" alt="">
+            <h4>Release Radar</h4>
+          </div>
+          <div class="card_artisti_popolari column">
+            <img src="assets/img/main_content/artisti_popolari/youg.jpeg" alt="">
+            <h4>Release Radar</h4>
+          </div>
+        </div>
       </section>
 
 
