Implemented footer, player_right with input range

--- a/index.html
+++ b/index.html
@@ -137,76 +137,76 @@
         </nav>
 
 
-      <section id="recently_played">
-        <h2><strong>Recently Played</strong></h2>
-        <div class="menu_recently_played d-flex">
-          <div class="card_recently_played d-flex column">
-            <img src="assets/img/main_content/recently_played/metal_lifting.jpg" alt="">
-            <h4>Heavy Metal</h4>
-            <p>Subtitle</p>
-          </div>
-          <div class="card_recently_played d-flex column">
-            <img src="assets/img/main_content/recently_played/stranger.jpg" alt="">
-            <h4>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h4>
-            <p>Kyle Dixon & Michael Stein</p>
-          </div>
-          <div class="card_recently_played d-flex column">
-            <img src="assets/img/main_content/recently_played/aquietplace.jpeg" alt="">
-            <h4>A quiet place</h4>
-            <p>Subtitle</p>
-          </div>
-          <div class="card_recently_played d-flex column">
-            <img src="assets/img/main_content/recently_played/split.jpeg" alt="">
-            <h4>Split</h4>
-            <p>Subtitle</p>
-          </div>
-          <div class="card_recently_played d-flex column">
-            <img src="assets/img/main_content/recently_played/sinister.jpeg" alt="">
-            <h4>A cure for wellness</h4>
-            <p>Subtitle</p>
-          </div>
-          <div class="card_recently_played d-flex column">
-            <img src="assets/img/main_content/recently_played/sinister.jpeg" alt="">
-            <h4>Sinister</h4>
-            <p>Subtitle</p>
-          </div>
+        <section id="recently_played">
+          <h2><strong>Recently Played</strong></h2>
+          <div class="menu_recently_played d-flex">
+            <div class="card_recently_played d-flex column">
+              <img src="assets/img/main_content/recently_played/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <p>Subtitle</p>
+            </div>
+            <div class="card_recently_played d-flex column">
+              <img src="assets/img/main_content/recently_played/stranger.jpg" alt="">
+              <h4>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h4>
+              <p>Kyle Dixon & Michael Stein</p>
+            </div>
+            <div class="card_recently_played d-flex column">
+              <img src="assets/img/main_content/recently_played/aquietplace.jpeg" alt="">
+              <h4>A quiet place</h4>
+              <p>Subtitle</p>
+            </div>
+            <div class="card_recently_played d-flex column">
+              <img src="assets/img/main_content/recently_played/split.jpeg" alt="">
+              <h4>Split</h4>
+              <p>Subtitle</p>
+            </div>
+            <div class="card_recently_played d-flex column">
+              <img src="assets/img/main_content/recently_played/sinister.jpeg" alt="">
+              <h4>A cure for wellness</h4>
+              <p>Subtitle</p>
+            </div>
+            <div class="card_recently_played d-flex column">
+              <img src="assets/img/main_content/recently_played/sinister.jpeg" alt="">
+              <h4>Sinister</h4>
+              <p>Subtitle</p>
+            </div>
 
 
-        </div>
-      </section>
-
-
-      <section id="create_for_you">
-        <h2><strong>Creato per John Doe</strong></h2>
-        <p>Pi&ugrave ascolti, pi&ugrave accurati saranno i suggerimenti.</p>
-        <div class="menu_create_for_you d-flex">
-          <div class="card_create_for_you d-flex column">
-            <img src="assets/img/main_content/create_for_you/mix.jpeg" alt="">
-            <h4>Release Radar</h4>
           </div>
-          <div class="card_create_for_you column">
-            <img src="assets/img/main_content/create_for_you/radar.jpeg" alt="">
-            <h4>Release Radar</h4>
+        </section>
+
+
+        <section id="create_for_you">
+          <h2><strong>Creato per John Doe</strong></h2>
+          <p>Pi&ugrave ascolti, pi&ugrave accurati saranno i suggerimenti.</p>
+          <div class="menu_create_for_you d-flex">
+            <div class="card_create_for_you d-flex column">
+              <img src="assets/img/main_content/create_for_you/radar.jpeg" alt="">
+              <h4>Release Radar</h4>
+            </div>
+            <div class="card_create_for_you column">
+              <img src="assets/img/main_content/create_for_you/mix.jpeg" alt="">
+              <h4>Release Radar</h4>
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
 
 
 
-      <section id="artisti_popolari">
-        <h2><strong>Artisti pi&ugrave popolari</strong></h2>
-        <p>Pi&ugrave ascolti, pi&ugrave accurati saranno i suggerimenti.</p>
-        <div class="menu_artisti_popolari d-flex">
-          <div class="card_artisti_popolari d-flex column">
-            <img src="assets/img/main_content/artisti_popolari/youg.jpeg" alt="">
-            <h4>Release Radar</h4>
+        <section id="artisti_popolari">
+          <h2><strong>Artisti pi&ugrave popolari</strong></h2>
+          <p>Pi&ugrave ascolti, pi&ugrave accurati saranno i suggerimenti.</p>
+          <div class="menu_artisti_popolari d-flex">
+            <div class="card_artisti_popolari d-flex column">
+              <img src="assets/img/main_content/artisti_popolari/youg.jpeg" alt="">
+              <h4>Release Radar</h4>
+            </div>
+            <div class="card_artisti_popolari column">
+              <img src="assets/img/main_content/artisti_popolari/youg.jpeg" alt="">
+              <h4>Release Radar</h4>
+            </div>
           </div>
-          <div class="card_artisti_popolari column">
-            <img src="assets/img/main_content/artisti_popolari/youg.jpeg" alt="">
-            <h4>Release Radar</h4>
-          </div>
-        </div>
-      </section>
+        </section>
 
 
       </section>
@@ -221,7 +221,24 @@
 
     <!-- footer -->
     <footer class="">
-      <div class="player">Player</div>
+      <div class="player d-flex">
+
+        <div class="player_left">
+          a
+        </div>
+
+
+
+
+        <div class="player_center">a</div>
+        <div class="player_right d-flex">
+          <i class="fas fa-list-ul"></i>
+          <i class="fas fa-desktop"></i>
+          <i class="fas fa-volume-up"></i>
+          <input type="range" min="1" max="100" value="20" class="slider" id="myRange">
+
+
+        </div>
     </footer>
     <!-- /footer -->
 
