--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
           <ul>
             <li>
               <a href="#">
-                <img src="assets/img/sidebar/home.svg" class="grey" alt="">
+                <i class="fas fa-home"></i>
                 <span>Home</span>
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="assets/img/sidebar/search.svg" alt="">
+                <i class="fas fa-search"></i>
                 <span>Cerca</span>
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="assets/img/sidebar/libreria.svg" alt="">
+              <i class="fas fa-book"></i>
                 <span>La tua libreria</span>
               </a>
             </li>
@@ -71,7 +71,7 @@
 
           <h5 class="playlist_text"><strong>PLAYLIST</strong></h5>
           <div class="crea_playlist d-flex">
-            <a href="#"> <i class="fas fa-plus-square crea_playlist_icon"></i></a>
+            <a href="#"> <i class="fas fa-plus crea_playlist_icon black"></i></a>
             <a href="#" class="crea_playlist_text">
               <span class="">Crea Playlist</span>
             </a>
@@ -223,21 +223,26 @@
     <footer class="">
       <div class="player d-flex">
 
-        <div class="player_left">
+        <div class="player_left d-flex">
           a
         </div>
 
 
 
 
-        <div class="player_center">a</div>
+        <div class="player_center d-flex column">
+          a
+          <h5>5</h5>
+        </div>
+
+
+
+
         <div class="player_right d-flex">
           <i class="fas fa-list-ul"></i>
           <i class="fas fa-desktop"></i>
           <i class="fas fa-volume-up"></i>
           <input type="range" min="1" max="100" value="20" class="slider" id="myRange">
-
-
         </div>
     </footer>
     <!-- /footer -->
