--- a/index.html
+++ b/index.html
@@ -224,15 +224,36 @@
       <div class="player d-flex">
 
         <div class="player_left d-flex">
-          a
+
+          <img src="assets/img/main_content/recently_played/sinister.jpeg"  alt="">
+          <div class="player_artist_track d-flex column">
+            <h5>Sinister</h5>
+            <span>Brano Nome</span>
+          </div>
+          <div class="player_left_icons d-flex">
+            <i class="far fa-heart"></i>
+            <i class="far fa-folder"></i>
+          </div>
+
         </div>
 
 
 
 
         <div class="player_center d-flex column">
-          a
-          <h5>5</h5>
+          <div class="player_icons d-flex">
+            <i class="fas fa-random"></i>
+            <i class="fas fa-step-backward"></i>
+            <i class="far fa-play-circle play_icon"></i>
+            <i class="fas fa-step-forward"></i>
+            <i class="fas fa-redo-alt"></i>
+          </div>
+          <div class="player_track d-flex">
+            <span>0:25</span>
+            <input type="range" min="1" max="100" value="20" class="slider" id="playerRange">
+            <span>4:35</span>
+          </div>
+
         </div>
 
 
@@ -242,7 +263,7 @@
           <i class="fas fa-list-ul"></i>
           <i class="fas fa-desktop"></i>
           <i class="fas fa-volume-up"></i>
-          <input type="range" min="1" max="100" value="20" class="slider" id="myRange">
+          <input type="range" min="1" max="100" value="20" class="slider" id="volumeRange">
         </div>
     </footer>
     <!-- /footer -->
