--- a/index.html
+++ b/index.html
@@ -140,36 +140,66 @@
         <section id="recently_played">
           <h2><strong>Recently Played</strong></h2>
           <div class="menu_recently_played d-flex">
-            <div class="card_recently_played d-flex column">
-              <img src="assets/img/main_content/recently_played/metal_lifting.jpg" alt="">
+            <div class="card_main_content d-flex column">
+              <div class="img_card_main_content">
+                <img src="assets/img/main_content/recently_played/metal_lifting.jpg" alt="">
+                <div class="overlay">
+                    <i class="far fa-play-circle play_icon"></i>
+                </div>
+              </div>
               <h4>Heavy Metal</h4>
               <p>Subtitle</p>
             </div>
-            <div class="card_recently_played d-flex column">
-              <img src="assets/img/main_content/recently_played/stranger.jpg" alt="">
+            <div class="card_main_content d-flex column">
+              <div class="img_card_main_content">
+                <img src="assets/img/main_content/recently_played/aquietplace.jpeg" alt="">
+                <div class="overlay">
+                    <i class="far fa-play-circle play_icon"></i>
+                </div>
+              </div>
               <h4>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h4>
               <p>Kyle Dixon & Michael Stein</p>
             </div>
-            <div class="card_recently_played d-flex column">
-              <img src="assets/img/main_content/recently_played/aquietplace.jpeg" alt="">
-              <h4>A quiet place</h4>
+            <div class="card_main_content d-flex column">
+              <div class="img_card_main_content">
+                <img src="assets/img/main_content/recently_played/aquietplace.jpeg" alt="">
+                <div class="overlay">
+                    <i class="far fa-play-circle play_icon"></i>
+                </div>
+              </div>              <h4>A quiet place</h4>
               <p>Subtitle</p>
             </div>
-            <div class="card_recently_played d-flex column">
-              <img src="assets/img/main_content/recently_played/split.jpeg" alt="">
+            <div class="card_main_content d-flex column">
+              <div class="img_card_main_content">
+                <img src="assets/img/main_content/recently_played/split.jpeg" alt="">
+                <div class="overlay">
+                    <i class="far fa-play-circle play_icon"></i>
+                </div>
+              </div>
               <h4>Split</h4>
               <p>Subtitle</p>
             </div>
-            <div class="card_recently_played d-flex column">
-              <img src="assets/img/main_content/recently_played/sinister.jpeg" alt="">
+            <div class="card_main_content d-flex column">
+              <div class="img_card_main_content">
+                <img src="assets/img/main_content/recently_played/sinister.jpeg" alt="">
+                <div class="overlay">
+                    <i class="far fa-play-circle play_icon"></i>
+                </div>
+              </div>
               <h4>A cure for wellness</h4>
               <p>Subtitle</p>
             </div>
-            <div class="card_recently_played d-flex column">
-              <img src="assets/img/main_content/recently_played/sinister.jpeg" alt="">
+            <div class="card_main_content d-flex column">
+              <div class="img_card_main_content">
+                <img src="assets/img/main_content/recently_played/sinister.jpeg" alt="">
+                <div class="overlay">
+                    <i class="far fa-play-circle play_icon"></i>
+                </div>
+              </div>
               <h4>Sinister</h4>
               <p>Subtitle</p>
             </div>
+
 
 
           </div>
@@ -179,13 +209,23 @@
         <section id="create_for_you">
           <h2><strong>Creato per John Doe</strong></h2>
           <p>Pi&ugrave ascolti, pi&ugrave accurati saranno i suggerimenti.</p>
-          <div class="menu_create_for_you d-flex">
-            <div class="card_create_for_you d-flex column">
-              <img src="assets/img/main_content/create_for_you/radar.jpeg" alt="">
+          <div class="menu_recently_played d-flex">
+            <div class="card_main_content d-flex column">
+              <div class="img_card_main_content">
+                <img src="assets/img/main_content/create_for_you/radar.jpeg" alt="">
+                <div class="overlay">
+                    <i class="far fa-play-circle play_icon"></i>
+                </div>
+              </div>
               <h4>Release Radar</h4>
             </div>
-            <div class="card_create_for_you column">
-              <img src="assets/img/main_content/create_for_you/mix.jpeg" alt="">
+            <div class="card_main_content column">
+              <div class="img_card_main_content">
+                <img src="assets/img/main_content/create_for_you/mix.jpeg" alt="">
+                <div class="overlay">
+                    <i class="far fa-play-circle play_icon"></i>
+                </div>
+              </div>
               <h4>Release Radar</h4>
             </div>
           </div>
@@ -196,13 +236,23 @@
         <section id="artisti_popolari">
           <h2><strong>Artisti pi&ugrave popolari</strong></h2>
           <p>Pi&ugrave ascolti, pi&ugrave accurati saranno i suggerimenti.</p>
-          <div class="menu_artisti_popolari d-flex">
-            <div class="card_artisti_popolari d-flex column">
-              <img src="assets/img/main_content/artisti_popolari/youg.jpeg" alt="">
+          <div class="menu_recently_played d-flex">
+            <div class="card_main_content d-flex column">
+              <div class="img_card_main_content">
+                <img class="img_artisti_popolari" src="assets/img/main_content/artisti_popolari/youg.jpeg" alt="">
+                <div class="overlay overlay_artisti_popolari">
+                    <i class="far fa-play-circle play_icon"></i>
+                </div>
+              </div>
               <h4>Release Radar</h4>
             </div>
-            <div class="card_artisti_popolari column">
-              <img src="assets/img/main_content/artisti_popolari/youg.jpeg" alt="">
+            <div class="card_main_content column">
+              <div class="img_card_main_content">
+                <img class="img_artisti_popolari" src="assets/img/main_content/artisti_popolari/youg.jpeg" alt="">
+                <div class="overlay overlay_artisti_popolari">
+                  <i class="far fa-play-circle play_icon"></i>
+                </div>
+              </div>
               <h4>Release Radar</h4>
             </div>
           </div>
