Improved Sidebar_Responsive + Improved Overlay

--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
 
       <aside class="sidebar d-flex column">
 
-
-
         <div class="sidebar_top d-flex column">
           <img class="logo" src="assets/img/sidebar/logo.svg" alt="">
+
           <ul>
             <li>
               <a href="#">
@@ -73,7 +72,7 @@
           <div class="crea_playlist d-flex">
             <a href="#"> <i class="fas fa-plus crea_playlist_icon black"></i></a>
             <a href="#" class="crea_playlist_text">
-              <span class="">Crea Playlist</span>
+              Crea Playlist
             </a>
           </div>
           <ul class="nome_playlist">
@@ -111,7 +110,25 @@
 
       </aside>
 
+      <aside class="sidebar_mobile d-flex column">
 
+        <div class="sidebar_mobile_top d-flex column">
+          <a href="#"><img src="assets/img/sidebar/logo-small.svg" alt="" class="logo_mobile"></a>
+
+          <a href="#"><i class="fas fa-home"></i></a>
+
+          <a href="#"><i class="fas fa-search"></i></a>
+
+          <a href="#"><i class="fas fa-book"></i></a>
+
+        </div>
+
+        <div class="sidebar_mobile_bottom d-flex column">
+          <a href="#"><i class="far fa-arrow-alt-circle-down"></i></a>
+          <a href=""><i class="fas fa-user-circle"></i></a>
+
+        </div>
+      </aside>
 
 
 
@@ -181,7 +198,7 @@
             </div>
             <div class="card_main_content d-flex column">
               <div class="img_card_main_content">
-                <img src="assets/img/main_content/recently_played/sinister.jpeg" alt="">
+                <img src="assets/img/main_content/recently_played/cure.jpeg" alt="">
                 <div class="overlay">
                     <i class="far fa-play-circle play_icon"></i>
                 </div>
@@ -270,7 +287,7 @@
 
 
     <!-- footer -->
-    <footer class="">
+    <footer>
       <div class="player d-flex">
 
         <div class="player_left d-flex">
