--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+
+  <!-- favicon -->
+  <link rel="icon" href="assets/img/favicon/favicon.ico">
+  <!-- /favicon -->
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   <!-- /bootstrap -->
@@ -62,7 +66,7 @@
             </li>
             <li>
               <a href="#">
-              <i class="fas fa-book"></i>
+                <i class="fas fa-book"></i>
                 <span>La tua libreria</span>
               </a>
             </li>
@@ -161,7 +165,7 @@
               <div class="img_card_main_content">
                 <img src="assets/img/main_content/recently_played/metal_lifting.jpg" alt="">
                 <div class="overlay">
-                    <i class="far fa-play-circle play_icon"></i>
+                  <i class="far fa-play-circle play_icon"></i>
                 </div>
               </div>
               <h4>Heavy Metal</h4>
@@ -171,7 +175,7 @@
               <div class="img_card_main_content">
                 <img src="assets/img/main_content/recently_played/aquietplace.jpeg" alt="">
                 <div class="overlay">
-                    <i class="far fa-play-circle play_icon"></i>
+                  <i class="far fa-play-circle play_icon"></i>
                 </div>
               </div>
               <h4>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h4>
@@ -181,16 +185,17 @@
               <div class="img_card_main_content">
                 <img src="assets/img/main_content/recently_played/aquietplace.jpeg" alt="">
                 <div class="overlay">
-                    <i class="far fa-play-circle play_icon"></i>
+                  <i class="far fa-play-circle play_icon"></i>
                 </div>
-              </div>              <h4>A quiet place</h4>
+              </div>
+              <h4>A quiet place</h4>
               <p>Subtitle</p>
             </div>
             <div class="card_main_content d-flex column">
               <div class="img_card_main_content">
                 <img src="assets/img/main_content/recently_played/split.jpeg" alt="">
                 <div class="overlay">
-                    <i class="far fa-play-circle play_icon"></i>
+                  <i class="far fa-play-circle play_icon"></i>
                 </div>
               </div>
               <h4>Split</h4>
@@ -200,7 +205,7 @@
               <div class="img_card_main_content">
                 <img src="assets/img/main_content/recently_played/cure.jpeg" alt="">
                 <div class="overlay">
-                    <i class="far fa-play-circle play_icon"></i>
+                  <i class="far fa-play-circle play_icon"></i>
                 </div>
               </div>
               <h4>A cure for wellness</h4>
@@ -210,7 +215,7 @@
               <div class="img_card_main_content">
                 <img src="assets/img/main_content/recently_played/sinister.jpeg" alt="">
                 <div class="overlay">
-                    <i class="far fa-play-circle play_icon"></i>
+                  <i class="far fa-play-circle play_icon"></i>
                 </div>
               </div>
               <h4>Sinister</h4>
@@ -231,7 +236,7 @@
               <div class="img_card_main_content">
                 <img src="assets/img/main_content/create_for_you/radar.jpeg" alt="">
                 <div class="overlay">
-                    <i class="far fa-play-circle play_icon"></i>
+                  <i class="far fa-play-circle play_icon"></i>
                 </div>
               </div>
               <h4>Release Radar</h4>
@@ -240,7 +245,7 @@
               <div class="img_card_main_content">
                 <img src="assets/img/main_content/create_for_you/mix.jpeg" alt="">
                 <div class="overlay">
-                    <i class="far fa-play-circle play_icon"></i>
+                  <i class="far fa-play-circle play_icon"></i>
                 </div>
               </div>
               <h4>Release Radar</h4>
@@ -258,7 +263,7 @@
               <div class="img_card_main_content">
                 <img class="img_artisti_popolari" src="assets/img/main_content/artisti_popolari/youg.jpeg" alt="">
                 <div class="overlay overlay_artisti_popolari">
-                    <i class="far fa-play-circle play_icon"></i>
+                  <i class="far fa-play-circle play_icon"></i>
                 </div>
               </div>
               <h4>Release Radar</h4>
@@ -292,7 +297,7 @@
 
         <div class="player_left d-flex">
 
-          <img src="assets/img/main_content/recently_played/sinister.jpeg"  alt="">
+          <img src="assets/img/main_content/recently_played/sinister.jpeg" alt="">
           <div class="player_artist_track d-flex column">
             <h5>Sinister</h5>
             <span>Brano Nome</span>
