Improved Crea_Playlist overflow + added filter to player_central

--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
             <span>Brano Nome</span>
           </div>
           <div class="player_left_icons d-flex">
-            <i class="far fa-heart"></i>
-            <i class="far fa-folder"></i>
+            <a href="#"><i class="far fa-heart"></i></a>
+            <a href="#"> <i class="far fa-folder"></i></a>
           </div>
 
         </div>
@@ -316,7 +316,7 @@
           <div class="player_icons d-flex">
             <i class="fas fa-random"></i>
             <i class="fas fa-step-backward"></i>
-            <i class="far fa-play-circle play_icon"></i>
+            <i class="far fa-play-circle play_icon" id="play_icon_player"></i>
             <i class="fas fa-step-forward"></i>
             <i class="fas fa-redo-alt"></i>
           </div>
