Added border_bottom to navbar when hover on a

--- a/index.html
+++ b/index.html
@@ -148,13 +148,15 @@
 
         <nav class="d-flex">
           <div class="navbar_menu">
-            <a href="#">IN EVIDENZA</a>
+            <a href="#">IN EVIDENZA <div class="navbar_border_bottom"></div></a>
           </div>
-          <div class="navbar_menu"><a href="#">PODCAST</a></div>
-          <div class="navbar_menu"><a href="#">CLASSIFICHE</a></div>
-          <div class="navbar_menu"><a href="#">GENERI E MOOD</a></div>
-          <div class="navbar_menu"><a href="#">NUOVE USCITE</a></div>
-          <div class="navbar_menu"><a href="#">SCOPRI</a></div>
+          <div class="navbar_menu">
+            <a href="#">PODCAST <div class="navbar_border_bottom"></div></a>
+          </div>
+          <div class="navbar_menu"><a href="#">CLASSIFICHE <div class="navbar_border_bottom"></div></a></div>
+          <div class="navbar_menu"><a href="#">GENERI E MOOD <div class="navbar_border_bottom"></div></a></div>
+          <div class="navbar_menu"><a href="#">NUOVE USCITE <div class="navbar_border_bottom"></div></a></div>
+          <div class="navbar_menu"><a href="#">SCOPRI <div class="navbar_border_bottom"></div></a></div>
         </nav>
 
 
